# nrf24l01-stick

./: .gitignore  20_nrf24l01stick.rules
driver/: Cargo.toml
driver/examples/: example.rs
driver/src/: codec.rs  lib.rs
firmware/: Cargo.toml  openocd.cfg
firmware/.cargo/: config
firmware/src/: adapter.rs  buffer.rs  main.rs
hardware/: fp-lib-table  nrf24l01-stick.kicad_pcb  nrf24l01-stick.kicad_pro  nrf24l01-stick.kicad_sch
hardware/NRF24L01_PA_Breakout.pretty/: NRF24L01_PA_Breakout_SMD.kicad_mod
protocol/: Cargo.toml
protocol/src/: lib.rs
