[package]
name = "nrf24l01-stick-driver"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf24l01-stick-protocol = { path = "../protocol" }
thiserror = "1.0"
tokio = { version = "0.2", features = [ "full" ] }
