[package]
name = "nrf24l01-stick-driver"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
nrf24l01-stick-protocol = { path = "../protocol" }
thiserror = "1.0"
tokio = { version = "0.2", features = [ "full" ] }
tokio-serial = "4.3.3"
tokio-util = { version = "0.3", features = [ "codec" ] }
futures = "0.3"
