[package]
name = "nrf24l01-stick-driver"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
nrf24l01-stick-protocol = { path = "../protocol" }
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", features = [ "codec" ] }
