[package]
name = "nrf24l01-stick"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5.3"
embedded-hal = "0.2.3"
embedded-nrf24l01 = { git = "https://github.com/mgottschlag/embedded-nrf24l01", branch = "wip" }
panic-semihosting = "0.5"
stm32f1xx-hal = { version = "0.6", features = ["stm32f103", "stm32-usbd", "rt"] }
usb-device = "0.2.5"
usbd-serial = "0.1"
nrf24l01-stick-protocol = { path = "../protocol" }

[profile]
[profile.release]
debug = true
lto = true
