[package]
name = "nrf24l01-stick"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5.3"
embedded-hal = "0.2.3"
embedded-nrf24l01 = { git = "https://github.com/astro/embedded-nrf24l01.git" }
nb = "0.1.3"
nrf24l01-stick-protocol = { path = "../protocol" }
panic-semihosting = "0.5"
stm32f4xx-hal = { version = "0.8.3", features = ["stm32f429", "usb_hs", "rt"] }
usb-device = "0.2.7"
usbd-serial = "0.1"

[profile]
[profile.release]
debug = true
lto = true
