[package]
name = "nrf24l01-stick"
version = "0.1.0"
authors = ["Mathias Gottschlag <mgottschlag@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5.3"
embedded-hal = "0.2.3"
embedded-nrf24l01 = { git = "https://github.com/mgottschlag/embedded-nrf24l01.git", branch = "spi-timing-hack" }
nb = "0.1.3"
nrf24l01-stick-protocol = { path = "../protocol" }
panic-semihosting = "0.5"
stm32l0xx-hal = { version = "0.7.0", features = ["mcu-STM32L082KBUx", "stm32-usbd", "rt"] }
usb-device = "0.2.7"
usbd-serial = "0.1"
void = { version = "1.0.2", default-features = false }

[profile]
[profile.release]
debug = true
lto = true
